# mcp-center

./: .env.development  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  eslint.config.js  index.html  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml  tsconfig.json  vite.config.ts
.cargo/: config.toml
crates/mcp-center/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/mcp-center-test-client/: AGENTS.md  Cargo.toml  README.md
crates/mcp-center-test-client/src/: lib.rs
crates/mcp-center/src/: error.rs  lib.rs  paths.rs
crates/mcp-center/src/bridge/: CLAUDE.md  connect.rs  control.rs
crates/mcp-center/src/cli/: CLAUDE.md  i18n.rs
crates/mcp-center/src/config/: AGENTS.md  id_generator.rs  mod.rs  server.rs
crates/mcp-center/src/daemon/: AGENTS.md  CLAUDE.md  control.rs  host.rs  logging.rs  rpc.rs  serve.rs  server_manager.rs
crates/mcp-center/src/project/: AGENTS.md  CLAUDE.md  mod.rs
crates/mcp-center/src/web/: AGENTS.md  CLAUDE.md  http.rs
crates/mcp-center/tests/: AGENTS.md  http_api.rs  init_cli.rs  mcp_cli.rs  project_cli.rs
docs/: README.md  frontend-redesign-prototype.md
docs/extend-backend/: README.md
public/locales/en/: common.json
public/locales/ja/: common.json
public/locales/zh-CN/: common.json
public/locales/zh-TW/: common.json
src/: AGENTS.md  App.tsx  CLAUDE.md  README.md  app.css  i18n.ts  main.tsx  vite-env.d.ts
src-tauri/: CLAUDE.md  Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/components/: AGENTS.md  AddServerDialog.schema.test.ts  AddServerDialog.test.tsx  AddServerDialog.tsx  ErrorFallback.tsx  HealthStatusBadge.states.test.tsx  HealthStatusBadge.test.tsx  HealthStatusBadge.tsx  Layout.test.tsx  Layout.tsx
src/components/__tests__/: ErrorFallback.test.tsx
src/components/icons/: McpCenterLogo.tsx
src/components/servers/: AGENTS.md  CLAUDE.md  ServerDetailDrawer.test.tsx  ServerDetailDrawer.tsx  ToolDetailDialog.test.tsx  ToolDetailDialog.tsx
src/components/ui/: CLAUDE.md  badge-variants.ts  badge.test.tsx  button-variants.ts  button.test.tsx  button.tsx  form.test.tsx  select.test.tsx
src/hooks/: CLAUDE.md  use-keyboard-shortcuts.test.tsx  use-keyboard-shortcuts.ts
src/lib/: CLAUDE.md  api-client-example.ts  api-types.generated.ts  api.test.ts  api.ts
src/pages/: AGENTS.md  Logs.tsx  Projects.interactions.test.tsx  Projects.test.ts  Projects.tsx  Servers.test.tsx  Servers.tsx  Settings.test.tsx  Settings.tsx  servers-columns.tsx
src/stores/: AGENTS.md  CLAUDE.md  mcp-store.test.ts  mcp-store.test.tsx  mcp-store.ts
src/test/: setup.ts  test-utils.tsx
