[package]
name = "mcp-center"
version = "0.0.1"
description = "MCP Center - 集中管理多个 MCP 服务器的桌面应用"
authors = ["wangnov"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2.0", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-shell = "2.0"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 核心库依赖 (未来添加)
# mcp-center-core = { path = "../../crates/core" }
# mcp-center-daemon = { path = "../../crates/daemon" }
