[package]
name = "mcp-center-test-client"
version = "0.0.1"
edition = "2024"
publish = false
description = "Lightweight MCP client for testing and debugging mcp-center"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "mcp-center-test-client"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
http = "1.1"
rmcp = { version = "0.8.3", features = [
    "client",
    "transport-async-rw",
    "transport-io",
    "transport-sse-client-reqwest",
    "transport-streamable-http-client-reqwest",
    "transport-child-process",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "io-std",
    "process",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2.5"
